--- a/.github/ISSUE_TEMPLATE.yml
+++ b/.github/ISSUE_TEMPLATE.yml
@@ -1,6 +1,10 @@
 name: Bug Report
-about: File a bug report
+description: File a bug report
 title: "[Bug]: "
+labels: ["bug", "triage"]
+projects: ["octo-org/1", "octo-org/44"]
+assignees:
+  - octocat
 body:
   - type: markdown
     attributes:
@@ -31,6 +35,7 @@ body:
       options:
         - 1.0.2 (Default)
         - 1.0.3 (Edge)
+      default: 0
     validations:
       required: true
   - type: dropdown
