--- a/.github/ISSUE_TEMPLATE/HELP.yml
+++ b/.github/ISSUE_TEMPLATE/HELP.yml
@@ -1,5 +1,5 @@
 name: ❔ Needing Help
-description: Create a help report
+description: You have regular questions? Then ask them here...
 title: "[Help] "
 labels: ["help"]
 body:
