Update language template

--- a/languages/$code.template
+++ b/languages/$code.template
@@ -50,6 +50,24 @@ msgstr ""
 msgid "Password mismatched."
 msgstr ""
 
+msgid "%s mins"
+msgstr ""
+
+msgid "%s hours"
+msgstr ""
+
+msgid "%s days"
+msgstr ""
+
+msgid "%s weeks"
+msgstr ""
+
+msgid "%s months"
+msgstr ""
+
+msgid "%s years"
+msgstr ""
+
 msgid "disabled"
 msgstr ""
 
