Create new Server-Overview

--- a/.htaccess
+++ b/.htaccess
@@ -35,7 +35,7 @@
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
 	# Handle Template Files
-	RewriteRule ^(css|js|fonts|images)/(.*)$ default/$1/$2 [QSA,L]
+	RewriteRule ^(css|js|fonts|images|assets)/(.*)$ default/$1/$2 [QSA,L]
 	
     # Handle Front Controller
     RewriteCond %{REQUEST_FILENAME} !-d
