--- a/default/js/codemirror/package.json
+++ b/default/js/codemirror/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/language-data": "^6.5.1",
+    "@codemirror/state": "^6.4.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "codemirror": "^6.0.1",
     "rollup": "^4.21.0"
   }
 }
