--- a/default/js/codemirror/package.json
+++ b/default/js/codemirror/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "codemirror",
+  "name": "editor",
   "version": "1.0.0",
   "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "start": "rollup -c"
+    "start": "rollup --config rollup.config.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@codemirror/basic-setup": "^0.20.0",
-    "@codemirror/highlight": "^0.19.8",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-python": "^6.1.6",
     "@codemirror/language": "^6.10.2",
-    "@codemirror/language-data": "^6.5.1",
     "@codemirror/legacy-modes": "^6.4.1",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.32.0",
     "@lezer/highlight": "^1.2.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "codemirror": "^6.0.1",
     "rollup": "^4.21.0"
   }
