--- a/default/js/codemirror/package.json
+++ b/default/js/codemirror/package.json
@@ -8,8 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup": "^4.21.0"
+  },
   "dependencies": {
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -17,11 +22,8 @@
     "@codemirror/language": "^6.10.2",
     "@codemirror/legacy-modes": "^6.4.1",
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.32.0",
+    "@codemirror/view": "^6.33.0",
     "@lezer/highlight": "^1.2.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "codemirror": "^6.0.1",
-    "rollup": "^4.21.0"
+    "codemirror": "^6.0.1"
   }
 }
